--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,14 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.madlevel4example2.ui.MainActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/btn_nav_icon_delete"
+        android:icon="@drawable/ic_delete_white_24dp"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        android:visible="false"
-        app:showAsAction="never" />
+        app:showAsAction="always" />
     <item
-        android:id="@+id/btn_nav_icon"
+        android:id="@+id/btn_nav_icon_history"
         android:icon="@drawable/ic_history_white_24dp"
-        app:showAsAction="ifRoom|ifRoom"
-        android:title="@string/header_icon_btn" />
+        android:title="@string/header_icon_btn"
+        app:showAsAction="ifRoom|ifRoom" />
 </menu>
