--- a/app/src/main/res/layout/item_game.xml
+++ b/app/src/main/res/layout/item_game.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/img_his_you"
         android:layout_width="145dp"
         android:layout_height="127dp"
         android:layout_marginTop="36dp"
@@ -18,7 +18,7 @@
         app:srcCompat="@drawable/paper" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/img__his_computer"
         android:layout_width="145dp"
         android:layout_height="127dp"
         android:layout_marginStart="12dp"
@@ -37,19 +37,21 @@
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintBottom_toBottomOf="@+id/img_his_you"
+        app:layout_constraintEnd_toStartOf="@+id/img_his_you"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintStart_toEndOf="@+id/img__his_computer"
+        app:layout_constraintTop_toTopOf="@+id/img_his_you"
         app:layout_constraintVertical_bias="0.49" />
 
     <TextView
-        android:id="@+id/txt_game+state"
+        android:id="@+id/txt_game_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,11 +61,12 @@
         android:id="@+id/txt_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_game+state" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_game_status" />
 
     <TextView
         android:id="@+id/lbl_comuter"
@@ -76,7 +79,7 @@
         app:layout_constraintEnd_toStartOf="@+id/lbl_computer"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/img__his_computer" />
 
     <TextView
         android:id="@+id/lbl_computer"
@@ -89,6 +92,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/lbl_comuter"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/img_his_you" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
